--- a/search.twig
+++ b/search.twig
@@ -1,4 +1,4 @@
-{% set limit = 6 %}
+{% set limit = 1 %}
 {% set articles = _Search.searchArticles({'limit': limit, 'offset': 0, 'search': search, 'sortBy': 'published'}) %}
 {% set config = _Network.getThemeConfig() %}
 
@@ -19,7 +19,7 @@
                 <div class="col-12 col-lg-10 mx-auto">
                     <div class="c-search__head">
                         {% set resultString = firstCount < 2 ? 'result' : 'results' %} 
-                        <div class="c-search__head-text">Showing {{firstCount}} {{resultString}} for:</div>
+                        <div class="c-search__head-text">Showing results for:</div>
                         <div class="c-search__head-title">{{search | raw}}</div>
                     </div>
                 </div>
@@ -78,6 +78,7 @@
             container       : 'results',
             infinite        : true,
             limit           : {{limit}},
+            offset          : {{limit}},
             loadtype        : 'api/search',
             searchterm      : "{{search}}",
             name            : 'search-load', //name of the search button
