--- a/layout-events.twig
+++ b/layout-events.twig
@@ -50,8 +50,8 @@
                 <div class="row row-space maincards">
                     <div class="col-12 col-lg-7">
                         {% for i in 0..49 if events[eventCount] %}
-                            <div class="d-none">{{_AppHelper.printArray(events)}}</div>
                             <div class="d-none">{{_AppHelper.printArray(events[eventCount])}}</div>
+                            <div class="d-none">{{_AppHelper.printArray(events[eventCount].startDate)}}</div>
                             {% set eventMonth = _AppHelper.getDateTimeBasedOnTimezone(events[eventCount].startDate, 'F Y') %}
                             {% if monthDivider != eventMonth %}
                                 <div class="u-generic-topBorder u-margin-top-20 u-margin-bottom-20 clearfix"></div>
