--- a/layouts/partials/footer/footer_themecolour.twig
+++ b/layouts/partials/footer/footer_themecolour.twig
@@ -208,8 +208,8 @@
                         {% endif %}
                         {% if config.social.tiktok is defined and config.social.tiktok is not empty %}
                             <a href="{{config.social.tiktok}}" class="u-generic-socialIcons__item" target="_blank">
-                                <span class="icon_tiktok">
-                                    <img src="{{networkData.templatePath}}/static/icons/tiktok_white.svg" alt="tiktok icon" class="img-fluid" />
+                                <span class="icon_tiktok d-flex">
+                                    <img src="{{networkData.templatePath}}/static/icons/tiktok_white.svg?v1" alt="tiktok icon" class="img-fluid" />
                                 </span>
                             </a>
                         {% endif %}
