--- a/article.twig
+++ b/article.twig
@@ -724,11 +724,23 @@
                                         </div>
                                     </div>
                                     {% if showPaywall != true %}
-                                        {% if config['inventory']['adSpace']['side-fix'][0] is defined %}
-                                            <div class="mt-4 ads-sticky">
-                                                <div class="j-adslot" id="{{config['inventory']['adSpace']['side-fix'][0]}}" data-adshape="side-fix"></div>
-                                            </div>
-                                        {% endif %}
+                                        <div class="ads-sticky">
+                                            {% if config['inventory']['adSpace']['side-fix'][0] is defined %}
+                                                <div class="mt-4">
+                                                    <div class="j-adslot" id="{{config['inventory']['adSpace']['side-fix'][0]}}" data-adshape="side-fix"></div>
+                                                </div>
+                                            {% endif %}
+                                            {% if config['inventory']['adSpace']['side-fix'][1] is defined %}
+                                                <div class="mt-3">
+                                                    <div class="j-adslot" id="{{config['inventory']['adSpace']['side-fix'][1]}}" data-adshape="side-fix"></div>
+                                                </div>
+                                            {% endif %}
+                                            {% if config['inventory']['adSpace']['side-fix'][2] is defined %}
+                                                <div class="mt-3">
+                                                    <div class="j-adslot" id="{{config['inventory']['adSpace']['side-fix'][2]}}" data-adshape="side-fix"></div>
+                                                </div>
+                                            {% endif %}
+                                        </div>
                                     {% endif %}
 
                                 </div>
