--- a/static/sass/components/_component.advertisment.scss
+++ b/static/sass/components/_component.advertisment.scss
@@ -27,7 +27,7 @@
         }
     }
     &__side-fix {
-        &-1{
+        &-1,&-2,&-3{
             margin-right: 0;
             margin-left: auto;
             @media #{$up-to-desktop}{
