--- a/layouts/main.twig
+++ b/layouts/main.twig
@@ -138,10 +138,14 @@
     <script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
     {# <meta id="g-ad-id" data-accno="/268436641/"> #}
     {% set adId = 21719263119 %}
+    {% set disableAdPush = false %}
     {% if config['gptAccountId'] is defined and config['gptAccountId'] is not empty %}
         {% set adId = config['gptAccountId'] %}
     {% endif %}
-    <meta id="g-ad-id" data-accno="/{{adId}}/">
+    {% if config['gptDisableAdPush'] is defined and config['gptDisableAdPush'] is not empty %}
+        {% set disableAdPush = true %}
+    {% endif %}
+    <meta id="g-ad-id" data-accno="/{{adId}}/" data-disableadpush="{{disableAdPush}}">
     <!-- Google AD Code end -->
 
     {% if googleAnalyitcsId is defined and googleAnalyitcsId is not empty%}
