--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -160,6 +160,11 @@
     {% set updated = true %} 
 {% endif %} 
 
+{% set articleImageSize = 600 %}
+{% if config['defaultSettings']['articleResizeImage'] is defined and config['defaultSettings']['articleResizeImage'] is not empty %}
+    {% set articleImageSize = config['defaultSettings']['articleResizeImage']  %}
+{% endif %}
+
 
 <main id="main" class="o-body-container o-body-container-md u-margin-top-60 {% if showPaywall == true %} mb-0 {% endif %}" role="main" data-paywall-type="{{paywallType}}">
         
@@ -227,7 +232,7 @@
                                         <div class="col-12">
                                             <div class="c-article__main-content mt-5">
                                                 <div class="c-article__container">
-                                                    {{ ArticleContent | _resizeImages({'width': 600}) | raw }}
+                                                    {{ ArticleContent | _resizeImages({'width': articleImageSize}) | raw }}
                                                 </div>
                                             </div>
                                         </div>
