--- a/layout-article-property.twig
+++ b/layout-article-property.twig
@@ -72,6 +72,10 @@
 {% set testCount = 0 %}
 
 
+{% set articleImageSize = 600 %}
+{% if config['defaultSettings']['articleResizeImage'] is defined and config['defaultSettings']['articleResizeImage'] is not empty %}
+    {% set articleImageSize = config['defaultSettings']['articleResizeImage']  %}
+{% endif %}
 
 <main id="main" class="o-body-container o-body-container-md u-margin-top-60 mb-0" role="main">
     <div class="c-article c-article-xs c-article__carousel">
@@ -354,7 +358,7 @@
                                                 {% endif %}
                                             </div>
                                             <div class="c-article__container">
-                                                {{ ArticleContent | _resizeImages({'width': 600}) | raw }}
+                                                {{ ArticleContent | _resizeImages({'width': articleImageSize}) | raw }}
                                             </div>
                                         </div>
                                         <hr />
