--- a/article.twig
+++ b/article.twig
@@ -788,7 +788,7 @@
         {% endif %}
 
 
-        <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
+        <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="article" data-pageTag="" data-adsection=""></div>
     </main>
 
 
