Subscribe Form Placeholder Changes

--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -199,7 +199,7 @@
                                             <label for="{{field.name}}" class="input__label">{{field.label}}</label>
                                             <input type="text" class="input__text articleExtendedData j-form-elem"
                                                 name="{{field.name}}" id="{{field.name}}" aria-required="{{required}}"
-                                                value="" placeholder="{{field.name}}">
+                                                value="" placeholder="{{field.label}}">
                                             <div class="help-block"></div>
                                         </div>
                                         {% endfor %}
