--- a/index.twig
+++ b/index.twig
@@ -164,7 +164,8 @@ CONFIG OPTIONS SET IN PLATFORM
         {% endfor %}
 
 
-        <div class="j-keyword-cont" data-keywords="{{blogData.keywords}}"></div>
+        <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{blogData.keywords}}"></div>
+
     </main><!-- .site-main -->
 
 
