--- a/blog.twig
+++ b/blog.twig
@@ -39,5 +39,5 @@
        
 
     </div>
-    <div class="j-keyword-cont" data-keywords="{{blogInfo.keywords}}"></div>
+    <div class="j-keyword-cont" data-keywords="{{blogInfo.keywords}}" data-pageName="" data-pageType="blog" data-pageTag="" data-adsection=""></div>
 </main><!-- .site-main -->
