--- a/index.twig
+++ b/index.twig
@@ -164,7 +164,7 @@ CONFIG OPTIONS SET IN PLATFORM
         {% endfor %}
 
 
-        <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{blogData.keywords}}"></div>
+        <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{blogData.keywords}}" data-pageName="" data-pageType="blog" data-pageTag="" data-adsection=""></div>
 
     </main><!-- .site-main -->
 
