--- a/layout-article-image-top.twig
+++ b/layout-article-image-top.twig
@@ -293,5 +293,5 @@
     {% elseif blogInfo.keywords is defined and blogInfo.keywords != '' %}
         {% set theKeywords = blogInfo.keywords %}
     {% endif %}
-    <div class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
+    <div class="j-keyword-cont" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="article" data-pageTag="" data-adsection=""></div>
 </main>
