--- a/section-realestate.twig
+++ b/section-realestate.twig
@@ -141,7 +141,7 @@
     {% endif %}
 
 
-    <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
+    <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="section" data-pageTags="" data-adsection=""></div>
 </main>
 
 
