--- a/section-multi2.twig
+++ b/section-multi2.twig
@@ -154,7 +154,7 @@
     {% endif %}
 
 
-    <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}"></div>
+    <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="section" data-pageTags="" data-adsection=""></div>
 </main><!-- .site-main -->
 
 
