--- a/simple-section.twig
+++ b/simple-section.twig
@@ -85,7 +85,7 @@
     {% endif %}
 
 
-    <div id="ad-keywords" data-keywords="{{theKeywords}}"></div>
+    <div id="ad-keywords" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="section" data-pageTags="" data-adsection=""></div>
 </main>
 
 <script>
